tests/bad/missing_curlies.oc
/// fail: Expected '}' at end of block

def main() {
    println("Hello, World!\n")